Bug 360359 - The Search applet does not provide all features that KRunner does
Summary: The Search applet does not provide all features that KRunner does
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Search widget (other bugs)
Version First Reported In: 5.5.5
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-10 13:10 UTC by Thomas Pfeiffer
Modified: 2020-08-03 04:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Pfeiffer 2016-03-10 13:10:53 UTC
"Search and Launch" makes it sound like it was just the same as KRunner only with a button to open it from a panel.
It should therefore behave exactly the same. It should use the same set of plugins that KRunner uses, and allows access to its configuration.
Otherwise, it's just confusing because it's "almost, but not quite like KRunner".

Reproducible: Always
Comment 1 Kai Uwe Broulik 2016-03-10 13:17:41 UTC
Search applet, ie. Milou, not the "Search and Launch" thing Netbook used to have :)
Comment 2 Thomas Pfeiffer 2016-03-10 18:52:21 UTC
(In reply to Kai Uwe Broulik from comment #1)
> Search applet, ie. Milou, not the "Search and Launch" thing Netbook used to
> have :)

Yes, sorry, that was the subtitle. I meant "Search" = Milou.
Comment 3 Kai Uwe Broulik 2016-07-06 11:19:28 UTC
I found the cause. KRunner RunnerManager opens the application config and reads the enabled categories from there. If run from KRunner it will be "krunnerrc" where also the enabled runners in the KCM are saved to.

However, when adding the search applet it is part of plasmashell and searches for the categories in plasmashellrc where they obviously aren't and then it falls back to the default set which doesn't include calculator and such.
Comment 4 Thomas Pfeiffer 2019-04-23 15:36:30 UTC
The Search Plasmoid still does not allow any configuration other than setting a shortcut.
Comment 5 Bug Janitor Service 2020-08-02 18:32:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/milou/-/merge_requests/9
Comment 6 Alexander Lohnau 2020-08-03 04:18:48 UTC
Git commit 3d62efff0aa271aa31f45f7706784e55c436d938 by Alexander Lohnau.
Committed on 02/08/2020 at 18:30.
Pushed by alex into branch 'master'.

Set krunnerrc config file for RunnerManager
FIXED-IN: 5.20

M  +1    -1    lib/runnerresultsmodel.cpp

https://invent.kde.org/plasma/milou/commit/3d62efff0aa271aa31f45f7706784e55c436d938