Set krunnerrc config file for RunnerManager

BUG: 360359
FIXED-IN: 5.20